--- a/styles.css/assignment.css
+++ b/styles.css/assignment.css
@@ -2,3 +2,58 @@
     padding: 0;
     margin: 0;
 }
+
+/* shared font style */
+ 
+
+
+
+.inter{
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+.raleway{
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+   font-style: normal;
+}
+
+
+/* header nav style */
+.header-nav{
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-logo{
+    margin-top: 50px;
+    margin-left: 150px;
+    font-size: 34px;
+    font-weight: 900;
+    color: #4E47FF;
+    
+}
+
+.button-primary{
+     margin-top: 52px;
+    margin-right: 150px;
+    background-color: rgb(78, 71, 255);
+    color: rgb(255, 255, 255);
+    padding: 12px 36px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    font-weight: 900;
+    height: 50px;
+    width: 140px;
+}
+
+.header{
+    max-width: 100%;
+    height: 698px;
+    background-image: url(../assets/hero-bg.png);
+    background-size: cover;
+}
