--- a/styles.css/assignment.css
+++ b/styles.css/assignment.css
@@ -53,7 +53,7 @@
 }
 
 .header{
-    max-width: 100%;
+    width: 100%;
     height: 698px;
     background-image: url(../assets/hero-bg.png);
     background-size: cover;
@@ -165,5 +165,59 @@
    font-size: 20px;
    color: rgba(0, 0, 0, 50%);
 }
- 
+
+/* review area detail */
+.review{
+   margin-top: 140px;
+   text-align: center;
+}
+ .review-header{
+   height: 49px;
+   font-weight: bold;
+   font-size: 42px;
+   color: rgb(37, 36, 50);
+   margin-bottom: 35px;
+ }
+ .review-portion{
+   display: flex;
+   gap: 20px;
+   margin-left: 150px;
+ }
+ .review-box{
+   text-align: left;
+   width: 300px;
+   box-shadow:6px 0px 100px 0px rgba(0, 0, 0, 10%);;
+   border-radius: 14px;
+   margin-left: 2px;
+   padding: 24px 24px;
+   background-color: white;
+   margin-bottom: 137px;
+ }
+ .star-image{
+   margin-bottom: 20px;
+ }
+ .review-title{
+   margin-bottom: 8px;
+   font-size: 1.4em;
+ }
+ .review-detail{
+   margin-bottom: 15px;
+   color: rgba(0, 0, 0, 80%);
+   font-size: 16px;
+   
+ }
+ .review-holder-detail{
+   display: flex;
+   gap: 10px;
+ }
+.review-holder-name{
+   font-size: 16px;
+   color: rgba(0, 0, 0, 50%);
+   font-weight: bold;
+}
+.review-date{
+   font-size: 12px;
+   margin-top: 2px;
+   color: rgba(0, 0, 0, 30%);
+}
 
