--- a/styles.css/assignment.css
+++ b/styles.css/assignment.css
@@ -186,7 +186,7 @@
  .review-box{
    text-align: left;
    width: 300px;
-   box-shadow:6px 0px 100px 0px rgba(0, 0, 0, 10%);;
+   border: 3px solid rgb(242, 237, 237);
    border-radius: 14px;
    margin-left: 2px;
    padding: 24px 24px;
@@ -220,4 +220,42 @@
    margin-top: 2px;
    color: rgba(0, 0, 0, 30%);
 }
-
+/* highlight area style */
+.highlight-area{
+   text-align: center;
+   background-color: white;
+   border: 3px solid rgba(0, 0, 0, 30%);
+   border-radius: 14px;
+   border-radius: 14px;
+   width: 1140px;
+  height: 670px;
+  margin-left: 170px;
+  margin-bottom: 100px;
+}
+.highlight-title{
+   font-size: 50px;
+   font-weight: bold;
+   color: black;
+   margin-top: 70px;
+   margin-bottom: 10px;
+}
+.highlight-detail{
+   font-size: 14px;
+   color: rgba(0, 0, 0, 50%);
+   margin-bottom: 15px;
+}
+.start-button{
+   width: 195px;
+   height: 38px;
+   border-radius: 10px;
+   padding: 12px 36px;
+   background-color: rgb(78, 71, 255);
+   border: none;
+   margin-bottom: 15px;
+   color: white;
+}
+.highlight-area img{
+   width: 840px;
+   height: 370px;
+   border-radius: 48px;
+}
