--- a/styles.css/assignment.css
+++ b/styles.css/assignment.css
@@ -25,6 +25,11 @@ body{
    font-style: normal;
 }
 
+/* shared button styles */
+.button-cursor{
+   cursor: pointer;
+}
+
 
 /* header nav style */
 .header-nav{
@@ -240,7 +245,7 @@ body{
    font-weight: bold;
    color: black;
    margin-top: 70px;
-   margin-bottom: 10px;
+   margin-bottom: 15px;
 }
 .highlight-detail{
    font-size: 14px;
@@ -273,6 +278,7 @@ form{
    justify-content: center;
    gap: 115px;
    align-items: center;
+   margin-bottom: 90px;
 }
 .newsletter-title{
    font-size: 70px;
@@ -314,4 +320,42 @@ form{
    margin-bottom: 20px;
    font-size: 16px;
    font-weight: bold;
+}
+
+/* footer area design */
+footer{
+  height: 260px;
+  background-color: white;
+  background-position: cover;
+  padding-top: 90px;
+   
+   
+}
+footer h1{
+   color: rgb(78, 71, 255);
+   font-size: 70px;
+   font-weight: bold;
+   margin-bottom: 5px;
+   text-align: center;
+}
+footer p{
+   font-size: 12px;
+   color: rgb(137, 135, 161);
+   width: 400px;
+   height: 41px;
+   margin-bottom: 10px;
+   margin-left: 550px;
+   text-align: center;
+}
+.footer-link ul{
+   display: flex;
+   justify-content: center;
+   gap: 25px;
+   list-style: none;
+}
+.footer-link ul a{
+   text-decoration: none;
+   color: rgb(137, 135, 161);
+   font-size: 15px;
+   cursor: pointer;
 }
