--- a/styles.css/assignment.css
+++ b/styles.css/assignment.css
@@ -29,6 +29,11 @@ body{
 .button-cursor{
    cursor: pointer;
 }
+button:hover{
+   background-color: orange;
+   color: black;
+   transform: scale(1.05);
+}
 
 
 /* header nav style */
@@ -256,11 +261,13 @@ body{
    width: 195px;
    height: 38px;
    border-radius: 10px;
-   padding: 12px 36px;
+   padding: 9px 36px;
    background-color: rgb(78, 71, 255);
    border: none;
    margin-bottom: 15px;
    color: white;
+   font-size: 16px;
+   font-weight: 500px;
 }
 .highlight-area img{
    width: 840px;
